--- a/DebuggerCLI/build.xml
+++ b/DebuggerCLI/build.xml
@@ -1,26 +1,42 @@
-<project>
+<project name="debugger" basedir="." default="main">
 
+    <property name="src.dir"     value="src"/>
+
+    <property name="build.dir"   value="build"/>
+    <property name="classes.dir" value="${build.dir}/classes"/>
+    <property name="jar.dir"     value="${build.dir}/jar"/>
+    <property name="main-class"  value="ist.meic.pa.DebuggerCLI"/>
+	<property name="javassist.lib" value="lib/javassist.jar"/>
+
+
+	<target name="init">
+	    <!-- Create the time stamp -->
+	    <tstamp/>
+	    <!-- Create the build directory structure used by compile -->
+	    <mkdir dir="${build.dir}"/>
+	</target>
+    
     <target name="clean">
-        <delete dir="classes"/>
+        <delete dir="${build.dir}"/>
     </target>
 
-    <target name="compile">
-    	 <mkdir dir="classes" />
-        <javac includeantruntime="false" srcdir="src" destdir="classes" classpath="lib/javassist.jar"/>
-    </target>
-
-    <target name="jar">
-        <mkdir dir="build/jar"/>
-        <jar destfile="build/jar/debugger.jar" basedir="build/classes">
+    <target name="compile" depends="init">
+        <mkdir dir="${classes.dir}"/>
+        <javac includeantruntime="false" srcdir="${src.dir}" destdir="${classes.dir}" classpath="${javassist.lib}"/>
+         <mkdir dir="${jar.dir}"/>
+        <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
-                <attribute name="Main-Class" value="debugger"/>
+                <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
         </jar>
     </target>
 
-    <target name="run">
-        <java jar="build/jar/debugger.jar" fork="true"/>
+    <target name="run" depends="compile">
+        <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
     </target>
 
-</project>
+    <target name="clean-build" depends="clean,compile"/>
 
+    <target name="main" depends="clean,run"/>
+
+</project>
