--- a/DebuggerCLI/build.xml
+++ b/DebuggerCLI/build.xml
@@ -30,13 +30,12 @@
             </manifest>
         </jar>
     </target>
-
-    <target name="run" depends="compile">
+<!--<target name="run" depends="compile">
         <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
     </target>
-
+-->
     <target name="clean-build" depends="clean,compile"/>
 
-    <target name="main" depends="clean,run"/>
-
+<!--<target name="main" depends="clean,run"/>-->
+	<target name="main" depends="compile"/>
 </project>
