Compiles the code and generates debugger.jar in the same location where the file build.xml is located

--- a/DebuggerCLI/build.xml
+++ b/DebuggerCLI/build.xml
@@ -24,7 +24,7 @@
         <mkdir dir="${classes.dir}"/>
         <javac includeantruntime="false" srcdir="${src.dir}" destdir="${classes.dir}" classpath="${javassist.lib}"/>
          <mkdir dir="${jar.dir}"/>
-        <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+        <jar destfile="${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
             </manifest>
@@ -37,5 +37,5 @@
     <target name="clean-build" depends="clean,compile"/>
 
 <!--<target name="main" depends="clean,run"/>-->
-	<target name="main" depends="compile"/>
+	<target name="main" depends="clean"/>
 </project>
