Adicionado a dependencia do clean no final da compilação

--- a/DebuggerCLI/build.xml
+++ b/DebuggerCLI/build.xml
@@ -37,5 +37,5 @@
     <target name="clean-build" depends="clean,compile"/>
 
 <!--<target name="main" depends="clean,run"/>-->
-	<target name="main" depends="clean"/>
+	<target name="main" depends="compile, clean"/>
 </project>
