--- a/DebuggerCLI/build.xml
+++ b/DebuggerCLI/build.xml
@@ -7,7 +7,6 @@
     <property name="jar.dir"     value="${build.dir}/jar"/>
     <property name="main-class"  value="ist.meic.pa.DebuggerCLI"/>
 	<property name="javassist.lib" value="lib/javassist.jar"/>
-	<property name="lib.dir" value="lib"/> 
 
 
 	<target name="init">
@@ -28,8 +27,8 @@
         <jar destfile="${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
+                <attribute name="Class-Path" value="${javassist.lib}"/>
             </manifest>
-            <zipgroupfileset dir="${lib.dir}" includes="**/*.jar"/>
         </jar>
     </target>
 <!--<target name="run" depends="compile">
